{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 10,
  "lineage": "b8390742-97df-acd0-7252-f917757e1e90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-template",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5a47f8865280111",
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:instance/i-077d312848030c5d0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-077d312848030c5d0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "circle-dev-ap-southeast-1",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f2500d59fe6414a1"
              }
            ],
            "primary_network_interface_id": "eni-0f2500d59fe6414a1",
            "private_dns": "ip-10-128-11-147.ap-southeast-1.compute.internal",
            "private_ip": "10.128.11.147",
            "public_dns": "ec2-13-250-22-49.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.22.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-09e83cb11716c8893",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5acf75d8fc31a2a",
            "tags": {
              "Name": "DevOps EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0980c63d3cfe6091a"
            ]
          },
          "depends_on": [
            "aws_network_interface.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bcdbda72a7411bf4",
            "owner_id": "027155467263",
            "tags": {
              "Name": "DevOps Gateway"
            },
            "vpc_id": "vpc-02984c23489e881bf"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0f2500d59fe6414a1",
            "private_dns_name": "ip-10-128-11-147.ap-southeast-1.compute.internal",
            "private_ip": "10.128.11.147",
            "private_ips": [
              "10.128.11.147"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0980c63d3cfe6091a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5acf75d8fc31a2a",
            "tags": {
              "Name": "DevOps Netowrk Interface"
            }
          },
          "depends_on": [
            "aws_security_group.devops-sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bcdbda72a7411bf4",
            "id": "r-rtb-0070455e91ed43a8c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0070455e91ed43a8c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0070455e91ed43a8c",
            "owner_id": "027155467263",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DevOps Public Route Table"
            },
            "vpc_id": "vpc-02984c23489e881bf"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c29ec4d4c987083",
            "route_table_id": "rtb-0070455e91ed43a8c",
            "subnet_id": "subnet-0a5acf75d8fc31a2a"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:security-group/sg-0980c63d3cfe6091a",
            "description": "DevOps Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0980c63d3cfe6091a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "DevOps_public_SSH",
            "name_prefix": null,
            "owner_id": "027155467263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02984c23489e881bf"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:subnet/subnet-0a5acf75d8fc31a2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.128.11.0/24",
            "id": "subnet-0a5acf75d8fc31a2a",
            "map_public_ip_on_launch": true,
            "owner_id": "027155467263",
            "tags": {
              "Name": "DevOps Public Subnet"
            },
            "vpc_id": "vpc-02984c23489e881bf"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:027155467263:vpc/vpc-02984c23489e881bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-0ad4b6da35eca83e8",
            "default_route_table_id": "rtb-09c891de9486fba83",
            "default_security_group_id": "sg-08b4d7dc2f85ad5e0",
            "dhcp_options_id": "dopt-67e0cc00",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02984c23489e881bf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09c891de9486fba83",
            "owner_id": "027155467263",
            "tags": {
              "Name": "DevOps VPC"
            }
          }
        }
      ]
    }
  ]
}